# pamela

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  pam  todo
cmake/Modules/: FindCRYPTSETUP.cmake
crypt/: a.out  key.key  procedure  procedure2  test.c  test2.c  test2.c~  test3.c~
crypt/loopback/: find.c  find.c~
include/: Crypt.hh  Exception.hh  Logger.hh  Utils.hh  cmd.h  defines.h  ftp.h  socket.h  socket.h~  tab.h  utils.h
src/: Crypt.cpp  Exception.cpp  Logger.cpp  Utils.cpp  main.c  main.c~  pam.c  pam.cpp  pam.c~
